--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,3 +1,6 @@
+.card {
+    position: relative;
+}
 .card__group {
     display: flex;
     justify-content: space-between;
@@ -20,4 +23,33 @@
     background: #F4F4F4;
     border-radius: 3px;
 }
-
+.card__save {
+    background: #F4F4F4;
+    border-radius: 30px;
+    width: 72px;
+    height: 21px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 9px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    border: none;
+    padding: 0;
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    cursor: pointer;
+}
+.card__saved {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+}
+.card__delete {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+}
