--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,9 +1,7 @@
 .cards {
     padding: 70px 0 28px;
 }
-.card__img {
-    width: 100%;
-}
+
 .cards__container {
     padding: 0 70px;
     max-width: 1140px;
@@ -11,7 +9,10 @@
     display: grid;
     column-gap: 30px;
     row-gap: 60px;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+}
+.cards__container-none {
+    display: none;
 }
 .cards__button {
     display: block;
@@ -25,7 +26,11 @@
     border-radius: 5px;
     cursor: pointer;
 }
-
+.cards__form__error {
+    font-size: 16px;
+    text-align: center;
+    color: black;
+}
 @media screen and (max-width: 980px){ 
     .cards__container {
         padding: 0 50px;
