--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -43,12 +43,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px;
 }
-
+.preloader__hide {
+    display: none;
+}
 .preloader__container {
     width: 100px;
     height: 100px;
