--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -105,6 +105,11 @@
     cursor: pointer;
 }
 
+ .profile__button--disabled{
+    color: #C2C2C2;
+
+ }
+
 .profile__button:hover{
     opacity: 0.7;
     transition: 300ms;
