--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -71,13 +71,6 @@
     border-bottom: 1px solid #3456F3;
 }
 
-.register__input-error{
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 12px;
-    color: #EE3465;
-    text-align: center;
-}
 
 .register__button{
     margin-top: 179px;
@@ -160,7 +153,24 @@
     opacity: 0.7;
     transition: 300ms;
 }
-
+.register__button-disabled {
+    color: #C2C2C2;
+    background: #F8F8F8;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.register__input-error {
+    color: #EE3465;
+}
+.register__error {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
+}
 @media screen and (max-width: 425px) {
     .register__text {
         font-size: 12px;
