--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -26,6 +26,16 @@
     border-radius: 50px;
     padding: 7px 7px 7px 22px;
     box-sizing: border-box;
+    position: relative;
+}
+.search__form-error {
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    color: red;
+    margin: 0;
+    font-size: 80%;
+
 }
 .search__box {
     display: flex;
@@ -58,80 +68,65 @@
     line-height: 18px;
     color: #000000;
 }
-
-.checkbox {
+.checkbox-form {
     display: flex;
-    align-items: center;
-    column-gap: 14px;    
-	height: 28px;    
-	line-height: 28px;        
-	position: relative;
-	vertical-align: middle;
-	font-size: 14px;
-	user-select: none;	
-}
-.checkbox .checkbox-switch {
-	position: relative;	
-	display: inline-block;
-	box-sizing: border-box;			
-	width: 36px;	
-	height: 20px;
-	border: none;
-	border-radius: 20px;	
-	vertical-align: top;
-	background: #eee;
-	transition: .2s;
-}
-.checkbox .checkbox-switch:before {
-	content: '';
-	position: absolute;
-	top: 2px;
-	left: 1px;	
-	display: inline-block;
-	width: 16px;	
-	height: 16px;
-	border-radius: 50%;
-	background: white;
-	transition: .15s;
-}
-.checkbox input[type=checkbox] {
-	display: block;	
-	width: 0;
-	height: 0;	
-	position: absolute;
-	z-index: -1;
-	opacity: 0;
-}
-.checkbox input[type=checkbox]:not(:disabled):active + .checkbox-switch:before {
-	box-shadow: inset 0 0 2px rgba(0, 0, 0, .3);
-}
-.checkbox input[type=checkbox]:checked + .checkbox-switch {
-	background: #2BE080;
-}
-.checkbox input[type=checkbox]:checked + .checkbox-switch:before {
-	transform:translateX(16px);
-}
- 
-/* Hover */
-.checkbox input[type="checkbox"]:not(:disabled) + .checkbox-switch {
-	cursor: pointer;
-	border-color: rgba(0, 0, 0, .3);
-}
- 
-/* Disabled */
-.checkbox input[type=checkbox]:disabled + .checkbox-switch {
-	filter: grayscale(70%);
-	border-color: rgba(0, 0, 0, .1);
-}
-.checkbox input[type=checkbox]:disabled + .checkbox-switch:before {
-	background: #eee;
-}
- 
-/* Focus */
-.checkbox.focused .checkbox-switch:before {
-	box-shadow: inset 0px 0px 4px #ff5623;
+    column-gap: 15px;
 }
 
+  .filter-checkbox__button {
+    width: 36px;
+    height: 20px;
+    cursor: pointer;
+    transition: 1s;
+    margin: 0;
+    border: none;
+    background: #ffffff;
+    border-radius: 12px;
+  }
+  .filter-checkbox__button:hover {
+    opacity: 0.7;
+  }
+  .filter-checkbox__button_active {
+    background-color: #2BE080;
+    position: relative;
+  }
+  .filter-checkbox__button_active::after {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    background: #fff;
+  }
+  .filter-checkbox__button_inactive {
+    background-color: #EBEBEB;
+    position: relative;
+  }
+  .filter-checkbox__button_inactive::after {
+    display: block;
+    content: '';
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    background: #F5F5F5;
+  }
+  .filter-checkbox__text {
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #000000;
+    margin: 0;
+  }
 @media screen and (max-width: 980px) { 
     .search {
         padding: 80px 50px 94px;
