--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -155,6 +155,10 @@
     opacity: 0.7;
     transition: 300ms;
 }
+.login__error {
+    text-align: center;
+    margin: 10px 0;
+}
 
 @media screen and (max-width: 425px) {
     .login__text {
