--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -137,6 +137,10 @@
     opacity: 0.7;
     transition: 300ms;
 }
+.profile__error {
+    margin-bottom: 20px;
+    font-size: 14px;
+}
 
 @media screen and (max-width: 425px) {
     .profile__input {
